<resources>
    <string name="app_name">LMS</string>

    <string name="default_notification_channel_id" translatable="false">LMS</string>
    <string name="default_notification_channel_des" translatable="false">Notifications From LMS</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="image_icon">Image Icon</string>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading&#8230;</string>
    <string name="request_error">Request error, please try again.</string>
    <string name="please_wait_while_processing_your_request">Please wait while processing your request.</string>
    <string name="no_results_found">No results found.</string>
    <string name="lms_is_a_platform_for_educational_centers_and_instructors_offers_location_based_courses_and_management_tools_to_control_the_delegation_between_instructors_and_students">LMS is a platform for educational centers and instructors, offers location-based courses and management tools to control the delegation between instructors and students</string>
    <string name="create_your_own_account">Create Your Own Account</string>
    <string name="student">Student</string>
    <string name="educational_center">Educational Center</string>
    <string name="instructor">Instructor</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="or">Or</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="app_logo">app logo</string>
    <string name="create_student_account">Create Student Account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_signing_up_you_agree_to_our_privacy_policy_and_terms_of_use">By signing up, you agree to our PRIVACY POLICY and TERMS OF USE.</string>
    <string name="back">Back</string>
    <string name="phone_number">Phone number</string>
    <string name="request_server_error" />
    <string name="invalid_request">Invalid Request</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="enrollments">Enrollments</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_qr_code_to_attend">Scan QR Code to Attend</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_lms">About LMS</string>
    <string name="contact_us">Contact Us</string>
    <string name="term_of_use">Term of use</string>
    <string name="log_out">Log out</string>
    <string name="lms_app_v1">LMS App. v1</string>
    <string name="position">Position: </string>
    <string name="birth_date_">Birth Date: </string>
    <string name="cv_">CV: </string>
    <string name="rating_">Rating: </string>
    <string name="courses_">Courses: </string>
    <string name="instructor_details">Instructor Details</string>
    <string name="current_courses">Current</string>
    <string name="passed_courses">Passed</string>


    <string name="facebook_app_id">2125021317583151</string>
    <string name="fb_login_protocol_scheme">fb2125021317583151</string>
    <string name="create_instructor_account">Create Instructor Account</string>
    <string name="center_name">Center Name</string>
    <string name="create_center_account">Create Center Account</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add_group">Add Group</string>
    <string name="add_course">Add Course</string>
    <string name="courses">Courses</string>
    <string name="groups">Groups</string>
    <string name="instructors">Instructors</string>
    <string name="typing">Typing</string>
    <string name="no_messages_found">No messages found</string>
    <string name="category">Category</string>
    <string name="language">Language</string>
    <string name="course">course</string>

    <string name="content">Content</string>
    <string name="number_of_session">Number Of Sessions</string>
    <string name="max_number_of_students">Max Number Of Students</string>
    <string name="price">Price</string>
    <string name="course_name">Course Name</string>
    <string name="enrollment_number">Enrollment Number</string>
    <string name="start_date">Start Date</string>
    <string name="course_details">Course Details</string>
    <string name="submit">Submit</string>
    <string name="pay">Pay</string>
    <string name="date">Date:</string>
    <string name="course_">Course Name:</string>
    <string name="enroll">Enroll</string>
    <string name="continue_">Continue</string>
    <string name="date_">Group Date:</string>
    <string name="price_">Course Price:</string>
    <string name="payment">Payment</string>
    <string name="you_will_create_payment_transaction_for_lms_application_to_continue_enroll_in_this_course">You will create payment transaction for LMS Application to continue enroll in this course.</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="create_course">Create Course</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="calender">Calender</string>
    <string name="center_calender">Center Calender</string>

    <string name="payment_text">Your payment is Secure and encrypted</string>
    <string name="card_name">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="card_duration">MM/YYYY</string>
    <string name="card_cvc">CVC</string>
    <string name="video_url">Video URL</string>
    <string name="materials">Materials</string>
    <string name="quize">Quize</string>
    <string name="time">Time</string>
    <string name="quizzes">Quizzes</string>
    <string name="live">Live</string>
    <string name="material_link">Material Link</string>
    <string name="button_add_session">Add Session Button</string>
    <string name="add_session">Add Session</string>
    <string name="sessions">Sessions</string>
    <string name="dession_details">Session Details</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="recording_video">Recording Video</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="center_details">Center Details</string>
    <string name="title_activity_maps">Map</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="verified_certificate_of_completion">Verified certificate of completion</string>
    <string name="certificate_info">In recognition of their commitments to achieving professional excellence,</string>
    <string name="certificate_info_two"> This certifies that Eng.</string>
    <string name="has_successfully_completed_the">Has successfully completed the</string>
    <string name="lms">LMS</string>
    <string name="choose_your_option">Choose Your Option</string>
    <string name="certificate">Certificate</string>
    <string name="rate_course">Rate Course</string>
    <string name="rate_instructor">Rate Instructor</string>
    <string name="rate_center">Rate Center</string>
    <string name="rate_now">Rate Now</string>
    <string name="choose">Choose</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="lms_application">LMS Application</string>
    <string name="save_as_pdf">Save As PDF</string>
</resources>
