<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_enrollments"
        android:icon="@drawable/ic_enrollment"
        android:title="@string/enrollments" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications" />

    <!--<item-->
    <!--android:id="@+id/navigation_profile"-->
    <!--android:icon="@drawable/ic_profile"-->
    <!--android:title="@string/profile" />-->

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/more" />

</menu>
