<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/sun_calender_TextView"
                style="@style/TextCalender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun" />

            <TextView
                android:id="@+id/mon_calender_TextView"
                style="@style/TextCalender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon" />

            <TextView
                android:id="@+id/tue_calender_TextView"
                style="@style/TextCalender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue" />

            <TextView
                android:id="@+id/wed_calender_TextView"
                style="@style/TextCalender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed" />

            <TextView
                android:id="@+id/thu_calender_TextView"
                style="@style/TextCalender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thu" />

            <TextView
                android:id="@+id/fri_calender_TextView"
                style="@style/TextCalender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri" />

            <TextView
                android:id="@+id/sat_calender_TextView"
                style="@style/TextCalender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/working_hour_7_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </android.support.v7.widget.RecyclerView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/working_hour_1_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </android.support.v7.widget.RecyclerView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/working_hour_2_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </android.support.v7.widget.RecyclerView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/working_hour_3_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </android.support.v7.widget.RecyclerView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/working_hour_4_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </android.support.v7.widget.RecyclerView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/working_hour_5_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </android.support.v7.widget.RecyclerView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/working_hour_6_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
